# pedalboard-sim

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs  midi.rs  sim.rs  terminal.rs  web.rs  web_ui.html
