[package]
name = "pedalboard-sim"
version = "0.1.0"
edition = "2021"
description = "Virtual pedalboard simulator — develop and test without hardware"
license = "GPL-3.0-or-later"

[dependencies]
pedalboard-protocol = { path = "../pedalboard-protocol" }
midir = "0.10"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
postcard = "1.1"
heapless = "0.9"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
